--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -94,10 +94,8 @@ section {
 .parallax-bg-bottom .container h3 span {
   background: rgba(0, 0, 0, 0.62);
 }
-.parallax-bg-bottom .container h6 {
-  font-size: 1.5em;
-}
 .parallax-bg-bottom .container h6 span {
+  font-size: 1.5em;
   background: rgba(255, 255, 255, 0.8);
 }
 .parallax-bg-bottom .container .price .price-t {
@@ -436,12 +434,20 @@ section {
   background: #A8A088;
   padding: 5px;
   color: #fff;
+  margin: 0;
 }
 .section07 .container .curriculum .drop-select .field h5 span {
   font-size: 0.8em;
 }
+.section07 .container .curriculum .drop-select .field p {
+  border-left: #9a9a9a 1px solid;
+  border-bottom: #9a9a9a 1px solid;
+  border-right: #9a9a9a 1px solid;
+}
 .section07 .container .curriculum .display-contents .type {
   background: #a8a088;
+  border-radius: 5px;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.62);
   padding: 10px 20px;
   z-index: 5;
 }
@@ -449,7 +455,6 @@ section {
   background: #fff;
   border-radius: 10%;
   padding: 20px;
-  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.62);
 }
 .section07 .container .curriculum .display-contents h6 {
   margin: 5vh 0 1vh;
@@ -536,6 +541,8 @@ section {
 .section10 .container ul li {
   font-size: 1.25em;
   line-height: 1.5em;
+  padding-bottom: 3px;
+  border-bottom: 1px dotted #9a9a9a;
 }
 .section10 .container ul li span {
   font-weight: bold;
@@ -629,7 +636,7 @@ section {
     font-size: 0.8em;
   }
   .parallax-bg-bottom .container h6 span {
-    font-size: 0.9em;
+    font-size: 1.25em;
   }
 }
 @media screen and (max-width: 1089px) {
@@ -714,7 +721,7 @@ section {
     font-size: 0.8em;
   }
   .parallax-bg-bottom .container h6 span {
-    font-size: 0.7em;
+    font-size: 1.1em;
   }
 }
 @media screen and (max-width: 532px) {
@@ -806,9 +813,16 @@ section {
   .parallax-bg-bottom {
     overflow-y: scroll;
   }
+  .parallax-bg-bottom .container {
+    padding-left: 0;
+    padding-right: 0;
+  }
   .parallax-bg-bottom .container .price {
     width: 75%;
     margin: 10px auto;
+  }
+  .parallax-bg-bottom .container h6 span {
+    font-size: 1em;
   }
   .parallax-bg-bottom footer {
     margin-top: 10vh;
@@ -869,6 +883,10 @@ section {
   .section09 .sect09-sect .overlay-text p {
     font-size: 1.1em;
   }
+
+  .parallax-bg-bottom .container h6 span {
+    font-size: 0.8em;
+  }
 }
 @media screen and (max-width: 424px) {
   .section04 .columns-wrapper .column .container .outer .category .category-text {
@@ -922,6 +940,10 @@ section {
   }
   .section09 .sect09-sect .overlay-text p {
     font-size: 0.9em;
+  }
+
+  .parallax-bg-bottom .container h6 span {
+    font-size: 0.7em;
   }
 }
 
