--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -19,6 +19,11 @@ html {
   display: none;
 }
 
+.white-out {
+  color:white;
+  user-select: none;
+}
+
 /* Popover */
 .popover {
   border: 2px dotted red;
@@ -48,7 +53,7 @@ section {
 //   padding: 5%;
 }
 .parallax-bg {
-  background-image: url('/assets/images/top-image-pc.png');
+  background-image: url('/assets/images/top-image-pc.jpg');
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -87,7 +92,7 @@ section {
 
 .parallax-bg-bottom {
   position: relative;
-  background-image: url('/assets/images/top-image-pc.png');
+  background-image: url('/assets/images/top-image-pc.jpg');
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -144,6 +149,7 @@ section {
     justify-content: space-around;
     background:white;
     padding-top:5px;
+    font-size: 12px;
     .left {
       ul {
         list-style-type: none;
@@ -152,12 +158,6 @@ section {
           margin-right:20px;
         }
       }
-    }
-    .middle {
-      font-size:1em;
-    }
-    .right {
-      font-size:1em;
     }
   }
 }
@@ -205,7 +205,7 @@ section {
 }
 
 .top {
-  background-image: url('/assets/images/top-image-pc.png');
+  background-image: url('/assets/images/top-image-pc.jpg');
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -857,7 +857,7 @@ section {
 
 @media screen and (max-width:768px) {
   .parallax-bg, .top {
-    background-image: url('/assets/images/top-image-ph.png');
+    background-image: url('/assets/images/top-image-ph.jpg');
   }
 
   .section02 {
